--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,8 @@
     "@mui/material": "^5.15.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "swiper": "^11.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
