--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
+    "react-toastify": "^9.0.6-vite-1",
     "swiper": "^11.0.6"
   },
   "devDependencies": {
