--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
     "react-toastify": "^9.0.6-vite-1",
+    "recharts": "^2.12.7",
     "swiper": "^11.0.6"
   },
   "devDependencies": {
